libs/rdb/test/compile_fail/select_from_distinct.cpp
#include "test_fail.hpp"

void test() {
  select(p.id).from(p).distinct(p.id);
}

